fix: remove empty "for" attribute

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <input id="name" type="text" value="万顺风" />
         </div>
         <div>
-          <label for="">性 别：</label>
+          <label>性 别：</label>
           <div>
             <input
               type="radio"
