refactor: use const instead of var

--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
           "basePath",
           "https://cdn.jsdelivr.net/npm/ace-builds@1.13.0/src-noconflict"
         );
-        var editor = ace.edit("third-ace-editor-one");
+        const editor = ace.edit("third-ace-editor-one");
         editor.setTheme("ace/theme/monokai");
         editor.session.setMode("ace/mode/xml");
         editor.session.setValue(one);
