--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
       <h2>第三个，会员信息XML定义和输出为HTML</h2>
       <p>
         实验原理：用 rowspan 属性设置行宽度，用 xsl:variable
-        动态计算课程的数量以适应不同学生有不同数量的课程
+        动态计算课程的数量以适应不同会员有不同数量的电话号码
       </p>
       <h3>XML数据</h3>
       <div id="fourth-three-xml" class="fourth-ace-editor"></div>
